<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/settings_language">
        <ListPreference
            android:defaultValue="SYSTEM"
            android:icon="@drawable/outline_language_24"
            android:key="language"
            android:summary="%s"
            android:title="@string/settings_language" />
        <Preference
            android:icon="@drawable/outline_translate_24"
            android:key="translation"
            app:singleLineTitle="false"
            android:title="@string/settings_translate" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_theme">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:icon="@drawable/outline_palette_24"
            android:key="followSystemAccent"
            app:singleLineTitle="false"
            android:title="@string/settings_system_theme_color" />
        <ListPreference
            android:defaultValue="MATERIAL_BLUE"
            android:dependency="followSystemAccent"
            android:entries="@array/color_texts"
            android:entryValues="@array/color_values"
            android:icon="@drawable/outline_format_color_fill_24"
            android:key="themeColor"
            android:summary="%s"
            app:singleLineTitle="false"
            android:title="@string/settings_theme_color" />
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/theme_texts"
            android:entryValues="@array/theme_values"
            android:icon="@drawable/outline_dark_mode_24"
            android:key="darkTheme"
            android:summary="%s"
            app:singleLineTitle="false"
            android:title="@string/dark_theme" />
        <SwitchPreferenceCompat
            android:icon="@drawable/baseline_wallpaper_24"
            android:key="systemWallpaper"
            app:singleLineTitle="false"
            android:title="@string/settings_system_wallpaper" />
        <SeekBarPreference
            android:key="systemWallpaperAlpha"
            android:dependency="systemWallpaper"
            app:updatesContinuously="true"
            app:min="0x11"
            android:max="0xCC"
            android:defaultValue="0xAA" />
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_invert_colors_24"
            android:key="blackDarkTheme"
            android:summary="@string/settings_pure_black_dark_theme_summary"
            app:singleLineTitle="false"
            android:title="@string/settings_pure_black_dark_theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_module">
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_bug_report_24"
            android:key="bypassRiskyPackageWarning"
            app:singleLineTitle="false"
            android:title="@string/settings_bypass_risky_package_warning"
            android:summary="@string/settings_bypass_risky_package_warning_summary" />
        <SwitchPreferenceCompat
            android:icon="@drawable/baseline_apps_24"
            android:key="packageQueryWorkaround"
            app:singleLineTitle="false"
            android:title="@string/settings_package_query_workaround"
            android:summary="@string/settings_package_query_workaround_summary" />
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_android_24"
            android:key="disableActivityLaunchProtection"
            app:singleLineTitle="false"
            android:title="@string/settings_disable_activity_launch_protection"
            android:summary="@string/settings_disable_activity_launch_protection_summary" />
        <MultiSelectListPreference
            android:icon="@drawable/syringe_24px"
            android:key="disableHooks"
            app:singleLineTitle="false"
            android:title="@string/settings_disable_hooks"
            android:summary="@string/settings_disable_hooks_summary" />
        <Preference
            android:icon="@drawable/outline_storage_24"
            android:key="dataIsolation"
            android:title="@string/settings_data_isolation" />
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_bug_report_24"
            android:key="detailLog"
            app:singleLineTitle="false"
            android:title="@string/settings_detail_log" />
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_bug_report_24"
            android:key="errorOnlyLog"
            app:singleLineTitle="false"
            android:title="@string/settings_error_only_log" />
        <ListPreference
            android:defaultValue="512"
            android:entries="@array/max_log_size_entries"
            android:entryValues="@array/max_log_size_values"
            android:icon="@drawable/outline_sd_storage_24"
            android:key="maxLogSize"
            android:summary="%s"
            app:singleLineTitle="false"
            android:title="@string/settings_max_log_size" />
        <SwitchPreferenceCompat
            android:icon="@drawable/outline_hide_image_24"
            android:key="hideIcon"
            android:summary="@string/settings_hide_icon_summary"
            app:singleLineTitle="false"
            android:title="@string/settings_hide_icon" />
        <org.frknkrc44.hma_oss.ui.preference.AppIconPreference
            android:key="launcherIcon"
            android:title="@string/settings_launcher_icon"/>
        <Preference
            android:icon="@drawable/outline_delete_24"
            android:key="clearUninstalledPackageConfigs"
            android:summary="@string/settings_clear_uninstalled_app_configs_summary"
            android:title="@string/settings_clear_uninstalled_app_configs" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_service">
        <Preference
            android:icon="@drawable/outline_stop_circle_24"
            android:key="stopSystemService"
            android:summary="@string/settings_stop_system_service_summary"
            android:title="@string/settings_stop_system_service" />
        <Preference
            android:icon="@drawable/outline_cleaning_services_24"
            android:key="forceCleanEnv"
            android:summary="@string/settings_force_clean_env_summary"
            android:title="@string/settings_force_clean_env" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_update">
        <SwitchPreferenceCompat
            android:disableDependentsState="true"
            android:icon="@drawable/outline_update_disabled_24"
            android:key="disableUpdate"
            app:singleLineTitle="false"
            android:title="@string/settings_disable_update" />
    </PreferenceCategory>
</PreferenceScreen>
